--- a/public/channelgrabber/messages/scss/messagecenter/_nav.scss
+++ b/public/channelgrabber/messages/scss/messagecenter/_nav.scss
@@ -6,7 +6,6 @@
   background-color: $color-xlgrey;
   border-bottom: 1px solid $color-lgrey;
   position: fixed;
-  margin-top: 50px;
   z-index: 2;
   ul {
     width: 100%;
